@@ -1,18 +1,19 @@
 #
-##  Rd2dvi -- Convert man pages (*.Rd help files) via LaTeX to DVI/PDF.
+##  Rd2dvi.sh -- Convert man pages (*.Rd help files) via LaTeX to DVI/PDF.
 ##
 ## Examples:
 ##  R CMD Rd2dvi.sh /path/to/Rsrc/src/library/base/man/Normal.Rd
 ##  R CMD Rd2dvi.sh `grep -l "\\keyword{distr" \
-##                  /path/to/Rsrc/src/library/base/man/*.Rd | sort | uniq`
+##                  /path/to/Rsrc/src/library/stats/man/*.Rd | sort | uniq`
 
+## This is set by R CMD on Unix but not on Windows
 R_PAPERSIZE=${R_PAPERSIZE-a4}
 
-revision='$Revision: 1.19 $'
+revision='$Revision: 1.41 $'
 version=`set - ${revision}; echo ${2}`
 version="Rd2dvi.sh ${version}
 
-Copyright (C) 2000-2001 The R Core Development Team.
+Copyright (C) 2000-2005 The R Core Development Team.
 This is free software; see the GNU General Public Licence version 2
 or later for copying conditions.  There is NO warranty." 
 
@@ -28,7 +29,7 @@ equals the basename of argument 'files' if this specifies a package
 
 Options:
   -h, --help		print short help message and exit
-  -v, --version		print version info and exit
+  -v, --version		print Rd2dvi version info and exit
       --batch		no interaction
       --debug		turn on shell debugging (set -x)
       --no-clean	do not remove created temporary files
@@ -238,7 +239,7 @@ cat >> ${build_dir}/Rd2.tex <<EOF
 \\documentclass[${R_PAPERSIZE}paper]{book}
 \\usepackage[${R_RD4DVI-ae}]{Rd}
 \\usepackage{makeidx}
-\\usepackage[latin1,latin2,latin9,utf8]{inputenc}
+\\usepackage[@ENC@]{inputenc}
 \\makeindex{}
 \\begin{document}
 EOF
@@ -309,6 +310,24 @@ cat >> ${build_dir}/Rd2.tex <<EOF
 \\printindex{}
 \\end{document}
 EOF
+
+## Look for encodings
+ENCS=`grep '^\\\\inputencoding' ${build_dir}/Rd2.tex | uniq |\
+  sed -e 's/^\\\\inputencoding{\(.*\)}/\1/'`
+ENCS=`grep '^\\\\\inputencoding' ${build_dir}/Rd2.tex |  uniq | \
+  sed -e 's/^\\\\inputencoding{\(.*\)}/\1/' | \
+  tr '\na-z0-9' ',a-z0-9' | sed -e s/,$//`
+echo "ENCS is ${ENCS}"
+
+## substitute for the encodings used
+mv ${build_dir}/Rd2.tex ${build_dir}/Rd2.tex.pre
+if test -z "${ENCS}"; then
+  sed -e '/^\\usepackage\[@ENC@\]{inputenc}$/d' \
+    ${build_dir}/Rd2.tex.pre > ${build_dir}/Rd2.tex
+else
+  sed -e s/^\\\\usepackage\\[@ENC@\\]/\\\\usepackage[${ENCS}]/ \
+    ${build_dir}/Rd2.tex.pre > ${build_dir}/Rd2.tex
+fi
 
 ## <FIXME>
 ## Need to do something smarter about the exit status in batch mode.
